feat: block suspended users
