# backend/src/reports/types.py
@@ -1,13 +1,12 @@
-from typing import Annotated, Literal
+from typing import Annotated
 from uuid import UUID
 
 from fastapi import Query
 from pydantic import AfterValidator, BaseModel, ConfigDict
 
 from ..display.output_models import ChartConfigModel
+from ..global_constants import ReportRoleName
 from ..validators.primitives import NonEmptyString
-
-type ReportRole = Literal["viewer", "commenter", "editor", "owner"]
 
 PAGE_SIZE_MIN: int = 1
 PAGE_SIZE_MAX: int = 100
@@ -25,7 +24,7 @@ def _valid_page_size(n: int) -> int:
 type PageSizeParam = Annotated[int, Query(), AfterValidator(_valid_page_size)]
 
 # Must keep in sync with seed.__main__.py
-type MinimumReportRole = Annotated[ReportRole, Query()]
+type MinimumReportRole = Annotated[ReportRoleName, Query()]
 
 
 class DisplayedContentContainer(BaseModel):
